# cve

./: .gitignore  CMakeLists.txt  README.md
include/bgsegm/: bgsegm.hpp
include/imgproc/: imgproc.hpp
include/pyboostcvconverter/: package_specific.hpp  pyboostcvconverter.hpp
src/: imgproc.cpp  pyboost_cv2_converter.cpp  pyboost_cv3_converter.cpp  pyboost_cv4_converter.cpp  python_module.cpp
src/bgsegm/: bgsegm.cpp  imbs.cpp  imbs.hpp
